# durak-protocol

./: .gitignore  README.md  pyproject.toml
src/durak_protocol/: .gitignore  __init__.py  base.py
src/durak_protocol/client_to_server/: __init__.py  account.py  assets.py  authorization.py  billing.py  chat.py  connection.py  friends.py  game.py  gifts.py  leaderboard.py  packet.py  tournament.py  users.py
src/durak_protocol/server_to_client/: __init__.py  account.py  assets.py  authorization.py  billing.py  chat.py  connection.py  consts.py  friends.py  game.py  gifts.py  info.py  leaderboard.py  packet.py  tournament.py  types.py  users.py
src/durak_protocol/shared/: types.py
