[project]
name = "durak-protocol"
version = "0.1.0"
description = "All game packets from Durak Online"
readme = "README.md"
authors = [
    { name = "trigger-off", email = "71810229+trigger-off@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "hatchling>=1.27.0",
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
